# koliseu-launcher

./: .gitignore  API_IMPLEMENTATION_GUIDE.md  DEPLOYMENT.md  INSTALLER_INSTRUCTIONS.md  LICENSE.txt  MIGRATION_SUMMARY.md  README.md  REMOVE_TAURI.md  SELECTIVE_UPDATE_README.md  electron-builder.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.electron.json  vite.config.ts
electron/: config.ts  main.ts  preload.ts  types.ts
electron/services/: auto-updater.ts  downloader.ts  integrity.ts  process-manager.ts  updater.ts
src/: App.tsx  config.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
src/components/: Launcher.tsx  UpdateModal.tsx
